add: 增加获取发布内容openapi
